Fix heading anchor link not being always visible in Chrome

--- a/timApp/static/stylesheet.css
+++ b/timApp/static/stylesheet.css
@@ -316,7 +316,7 @@ ul ul ul, ol ol ol {
     right: -0.5em;
 }
 
-.par:hover .headerlink {
+*:hover > .headerlink {
     visibility: inherit;
 }
 
